fix: fix overflowing on safari

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -3,10 +3,8 @@
 @tailwind utilities;
 
 @layer base {
-  body {
-    @apply bg-gray-900;
-
-    overflow-x: hidden;
+  html, body {
+    @apply bg-gray-900 overflow-x-hidden;
   }
 }
 
